@@ -1,3 +1,13 @@
+2009-05-12  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	Fixes: NB#115698 - Windows not updating in some cases
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Removed usage of
+	clutter GLX texture pixmaps as they currently don't work properly
+	in scratchbox. Also disabled MBWMCompMgrClutterClientDontUpdate on
+	scratchbox as this caused NB#115698 (It only existed as a minor
+	performance improvement, and accuracy is more important in scratchbox)
+
 2009-05-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.38
